--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./public/image/logonegro.png" type="image/png">
+    <link rel="icon" href="./public/Image/logoblanco.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MI-RUTA</title>
   </head>
